# reef

./: Cargo.toml  README.md
crates/reef/: Cargo.toml
crates/reef-api/: Cargo.toml
crates/reef-api/src/: error.rs  lib.rs  middleware.rs  models.rs  state.rs
crates/reef-api/src/routes/: api_keys.rs  assistants.rs  chat.rs  dev.rs  files.rs  metrics.rs  mod.rs  threads.rs  vector_stores.rs
crates/reef-api/tests/: integration.rs
crates/reef-engine/: Cargo.toml
crates/reef-engine/src/: error.rs  lib.rs  model_puller.rs  registry.rs  state_machine.rs  worker.rs
crates/reef-engine/src/backends/: embedded_llama.rs  grpc.rs  mod.rs
crates/reef-proto/: Cargo.toml  build.rs
crates/reef-proto/src/: lib.rs
crates/reef-rag/: Cargo.toml
crates/reef-rag/src/: dag.rs  error.rs  lib.rs  parser.rs
crates/reef-storage/: Cargo.toml
crates/reef-storage/migrations/: 001_initial_schema.sql
crates/reef-storage/src/: backend.rs  error.rs  lib.rs  memory.rs  models.rs  postgres.rs  query.rs  turso.rs
crates/reef/src/: cli.rs  main.rs  server.rs  worker.rs
