[workspace]
members = [
    "crates/reef",
    "crates/reef-api",
    "crates/reef-engine",
    "crates/reef-storage",
    "crates/reef-rag",
    "crates/reef-proto",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CowabungaAI Contributors"]
license = "Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
# Async
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"

# Web / API
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "request-id"] }
hyper = { version = "1.5", features = ["full"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "uuid", "chrono", "migrate"] }
libsql = "0.6"

# Auth
jsonwebtoken = "9.3"
argon2 = "0.5"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors
thiserror = "2.0"
anyhow = "1.0"

# Types
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.8"

# Utils
regex = "1.11"
once_cell = "1.20"
dashmap = "6.1"
parking_lot = "0.12"

# HTTP / Download
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }

# Model Hub
hf-hub = { version = "0.3", features = ["tokio"] }

# CLI
indicatif = "0.17"
directories = "5.0"

# Streaming
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# Optional embedded inference (feature-gated)
# llama-cpp-2 = { version = "0.1", optional = true }

# Internal
reef-proto = { path = "crates/reef-proto" }
reef-storage = { path = "crates/reef-storage" }
reef-engine = { path = "crates/reef-engine" }
reef-rag = { path = "crates/reef-rag" }
reef-api = { path = "crates/reef-api" }
