[package]
name = "reef-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reef-storage.workspace = true
reef-proto.workspace = true

tonic.workspace = true
prost.workspace = true

async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
dashmap.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
reqwest.workspace = true
hf-hub.workspace = true
indicatif.workspace = true
directories.workspace = true

[features]
llama = []

[dev-dependencies]
tokio.workspace = true
