[package]
name = "reef-rag"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reef-storage.workspace = true
reef-proto.workspace = true

async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
