[package]
name = "reef-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sqlx.workspace = true
libsql.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio.workspace = true
