[package]
name = "reef"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "reef"
path = "src/main.rs"

[dependencies]
reef-api.workspace = true
reef-storage.workspace = true
reef-engine.workspace = true
reef-proto.workspace = true
reef-rag.workspace = true

axum.workspace = true
tower-http.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
sqlx.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

thiserror.workspace = true
anyhow.workspace = true

uuid.workspace = true
chrono.workspace = true

clap = { version = "4.5", features = ["derive", "env"] }

[features]
default = []
llama = ["reef-engine/llama"]

[dev-dependencies]
tokio.workspace = true
